--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    Enter your name: <input type="text" id="fname">
+    Enter your name: <input type="text" id="fname" onchange="myfunc()">
 	
 	<script type="text/javascript" src="./script.js">
 	</script>
